source/App.css
/*
	Put anything you reference with "url()" in ../assets/
	This way, you can minify your application, and just remove the "source" folder for production
*/
body {
	background: black;
	color: lightgrey;
}

.time-display {
	font-family: Verdana, Arial, 'Helvetica neue';
	text-align: center;
	font-weight: bold;
	color: lightgrey;
}

.app-progress-black {
	background: black;
	margin: 6px;
	height: 16px;
}

